<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RadilogWalker</string>
    <string name="mestime_settings">Measurement Time</string>
    <string name="rectime_settings">Record Time</string>
    <string name="recfile_settings">Record File</string>
    <string name="status_message">Waiting Connection</string>
    <string name="data_label">Measured Value(uSv/h)</string>
    <string name="data_save">Record the value</string>
    <string name="mes_90s">90 seconds</string>
    <string name="mes_60s">60 seconds</string>
    <string name="mes_30s">30 seconds</string>
    <string name="mes_10s">10 seconds</string>
    <string name="mes_03s">3 seconds</string>
    <string name="mes_auto">Auto</string>
    <string name="rectime_manual">Manual Recording</string>
    <string name="rectime_auto">Auto Recording</string>
    <string name="rectime_setup">Auto Recoding Interval</string>
    <string name="unit_hours">hours</string>
    <string name="unit_minutes">minutes</string>
    <string name="unit_seconds">seconds</string>
    <string name="interval_minutes">Interval(minutes)</string>
    <string name="label_ok">OK</string>
    <string name="label_cancel">Cancel</string>
    <string name="dev_connected">Connected</string>
    <string name="dev_updated">Updated</string>
    <string name="dev_recorded">Recorded</string>
    <string name="default_recordfile">RLWData.csv</string>
    <string name="csv_tags">Latitude,Longitude,DoseRate,GpsDateTime,DoseDateTime</string>
    <string name="datetime_format">yyyy-MM-dd HH:mm:ss</string>
    <string name="data_directory">RadilogWalker</string>
    <string name="recfile_setup">Record File Setup</string>
    <string name="file_name">Filename</string>
    <string name="delete_record">Discard Recorded Data</string>
    <string name="bg_run">Measure in Background</string>
    
</resources>
