<menu xmlns:android="http://schemas.android.com/apk/res/android" >

        <item
	android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings">
        <menu>
		<group android:checkableBehavior="single">
      		<item android:id="@+id/mestime_30s" android:visible="true" android:title="@string/mes_30s" android:checked="true" android:enabled="true" android:checkable="true" android:titleCondensed="30sec"/>
        	<item android:id="@+id/mestime_10s" android:title="@string/mes_10s" android:titleCondensed="10sec" android:visible="true" android:checked="false" android:enabled="true" android:checkable="true"/>
        	<item android:id="@+id/mestime_03s" android:title="@string/mes_03s" android:titleCondensed="10sec" android:visible="true" android:checked="false" android:enabled="true" android:checkable="true"/>
        	</group>
        </menu>
    </item>

</menu>
