<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#000000"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/status_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/status_message"
        android:textColor="#ffffff"
        android:textSize="12pt" />

    <TextView
        android:id="@+id/data_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/status_message"
        android:layout_below="@+id/status_message"
        android:layout_marginTop="31dp"
        android:text="@string/data_label"
        android:textColor="#ffffff"
        android:textSize="10pt"
        android:ems="10" />

    <TextView
        android:id="@+id/data_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/data_label"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/data_label"
        android:textColor="#ff4000"
        android:textSize="28pt"
        android:ems="5" />

    <Button
        android:id="@+id/save_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/data_value"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/data_value"
        android:text="@string/data_save"
        android:textColor="#ffffff" />

</RelativeLayout>
